# Project_Switch

./: CMakeLists.txt  README.md  main.cpp  win_api.cpp  win_api.h  worker.cpp  worker.h
ESP_Switch/final_release/: final_release.ino
Windows_Service/: CMakeLists.txt  main.cpp  win_api.cpp  win_api.h  worker.cpp  worker.h
signal/: logo.qrc  main.cpp  remote.cpp  remote.h  signal.pro  signal.pro.user.d256edb
smart_ui/: logo_widget.cpp  logo_widget.h  main.cpp  remote.cpp  remote.h  remote.rep  rsc.qrc  serial_key.cpp  serial_key.h  settings_widget.cpp  settings_widget.h  smart_ui.pro  smart_ui.pro.user.8e939e4  smart_ui.pro.user.d256edb  status_bar.cpp  status_bar.h  title_bar.cpp  title_bar.h  title_widget.cpp  title_widget.h  widget.cpp  widget.h
smart_ui/style/: stylesheet.css
up_ver/: main.cpp  saver.cpp  saver.h  up_ver.pro  up_ver.pro.user.8e939e4  up_ver.pro.user.d256edb
